Use solano-runner helper script

--- a/solano.yml
+++ b/solano.yml
@@ -5,12 +5,20 @@
 
 :ruby_version: ruby-1.9.3
 
+test_pattern:
+  - '**/*Test.java'
+
 :tests:
 - type: junit
-  command: mvn test && cp art/rep.xml target/surefire-reports/TEST-com.app.IntegrationTest.xml
+#  command: mvn test && cp art/rep.xml target/surefire-reports/TEST-com.app.IntegrationTest.xml
+  command: bin/solano-runner
   mode: basic
+  mode: parallel
+  output: exit-code
+  files:
+    - include: '**/*Test.java'
   report_files:
-  - "**/surefire-reports/TEST-*.xml"
+    - "**/surefire-reports/TEST-*.xml"
 
 #- type: custom
 #  command: mvn --help
